GMS-99 IO operations simplified